
ADD_SUBDIRECTORY(Info)


SET(Core_Algorithms_Interface_SRCS
  Bundle/GetColorMapsFromBundleAlg.cc
  Bundle/InsertFieldsIntoBundleAlg.cc
  Bundle/GetFieldsFromBundleAlg.cc
  Bundle/InsertColorMap2sIntoBundleAlg.cc
  Bundle/GetBundlesFromBundleAlg.cc
  Bundle/GetPathsFromBundleAlg.cc
  Bundle/InsertStringsIntoBundleAlg.cc
  Bundle/GetNrrdsFromBundleAlg.cc
  Bundle/GetMatricesFromBundleAlg.cc
  Bundle/JoinBundlesAlg.cc
  Bundle/ReportBundleInfoAlg.cc
  Bundle/InsertPathsIntoBundleAlg.cc
  Bundle/GetColorMap2sFromBundleAlg.cc
  Bundle/InsertMatricesIntoBundleAlg.cc
  Bundle/InsertNrrdsIntoBundleAlg.cc
  Bundle/InsertBundlesIntoBundleAlg.cc
  Bundle/GetStringsFromBundleAlg.cc
  Bundle/InsertColorMapsIntoBundleAlg.cc
  Bundle/CreateParameterBundleAlg.cc
  Bundle/InsertEnvironmentIntoBundleAlg.cc
  ChangeFieldData/ApplyMappingMatrixAlg.cc
  ChangeFieldData/MaskLatVolWithTriSurfAlg.cc
  ChangeFieldData/ConvertFieldBasisAlg.cc
  ChangeFieldData/ReportMeshQualityMeasuresAlg.cc
  ChangeFieldData/SelectAndSetFieldDataAlg.cc
  ChangeFieldData/CalculateFieldData3Alg.cc
  ChangeFieldData/SetFieldDataAlg.cc
  ChangeFieldData/SwapFieldDataWithMatrixEntriesAlg.cc
  ChangeFieldData/ConvertLatVolDataFromElemToNodeAlg.cc
  ChangeFieldData/CalculateNodeNormalsAlg.cc
  ChangeFieldData/CalculateVectorMagnitudesAlg.cc
  ChangeFieldData/ConvertIndicesToFieldDataAlg.cc
  ChangeFieldData/CalculateDistanceToFieldBoundaryAlg.cc
  ChangeFieldData/MapFieldDataFromSourceToDestinationAlg.cc
  ChangeFieldData/SelectAndSetFieldData3Alg.cc
  ChangeFieldData/CreateFieldDataAlg.cc
  ChangeFieldData/ConvertLatVolDataFromNodeToElemAlg.cc
  ChangeFieldData/CalculateFieldDataCompiledAlg.cc
  ChangeFieldData/MapFieldDataFromElemToNodeAlg.cc
  ChangeFieldData/ApplyFilterToFieldDataAlg.cc
  ChangeFieldData/GetFieldDataAlg.cc
  ChangeFieldData/CalculateFieldData2Alg.cc
  ChangeFieldData/CalculateLatVolGradientsAtNodesAlg.cc
  ChangeFieldData/CalculateGradientsAlg.cc
  ChangeFieldData/CalculateSignedDistanceToFieldAlg.cc
  ChangeFieldData/CalculateInsideWhichFieldAlg.cc
  ChangeFieldData/MapFieldDataFromNodeToElemAlg.cc
  ChangeFieldData/ConvertFieldDataTypeAlg.cc
  ChangeFieldData/CalculateIsInsideFieldAlg.cc
  ChangeFieldData/CalculateFieldDataAlg.cc
  ChangeFieldData/CalculateDistanceToFieldAlg.cc
  ChangeMesh/TransformPlanarMeshAlg.cc
  ChangeMesh/ConvertMeshToUnstructuredMeshAlg.cc
  ChangeMesh/ConvertQuadSurfToTriSurfAlg.cc
  ChangeMesh/TransformMeshWithFunctionAlg.cc
  ChangeMesh/ConvertHexVolToTetVolAlg.cc
  ChangeMesh/ConvertMeshCoordinateSystemAlg.cc
  ChangeMesh/ConvertMeshToPointCloudAlg.cc
  ChangeMesh/ConvertMeshToIrregularMeshAlg.cc
  ChangeMesh/TransformMeshWithTransformAlg.cc
  ChangeMesh/CalculateMeshNodesAlg.cc
  ChangeMesh/SmoothMeshAlg.cc
  ChangeMesh/EditMeshBoundingBoxAlg.cc
  ChangeMesh/SwapNodeLocationsWithMatrixEntriesAlg.cc
  ChangeMesh/MapFieldDataToNodeCoordinateAlg.cc
  ChangeMesh/ScaleFieldMeshAndDataAlg.cc
  Converters/ConvertMatrixToStringAlg.cc
  Converters/ConvertMatrixToFieldAlg.cc
  Converters/ConvertNrrdToFieldAlg.cc
  DataArrayMath/CreateDataArrayAlg.cc
  DataArrayMath/CreateDataArrayFromIndicesAlg.cc
  DataArrayMath/ReportDataArrayInfoAlg.cc
  DataArrayMath/CreateVectorArrayAlg.cc
  DataArrayMath/ReplicateDataArrayAlg.cc
  DataArrayMath/SplitVectorArrayInXYZAlg.cc
  DataArrayMath/DecomposeTensorArrayIntoEigenVectorsAlg.cc
  DataArrayMath/CalculateDataArrayAlg.cc
  DataArrayMath/ReportDataArrayMeasureAlg.cc
  DataArrayMath/AppendDataArraysAlg.cc
  DataArrayMath/CreateTensorArrayAlg.cc
  DataIO/DataIOHelper.cc
  DataIO/DataIOHelper.h
  DataIO/WriteBundleAlg.cc
  DataIO/WritePathAlg.cc
  DataIO/WriteColorMap2DAlg.cc
  DataIO/ReadHDF5FileAlg.cc
  DataIO/ReadFieldAlg.cc
  DataIO/ReadNrrdAlg.cc
  DataIO/WriteColorMapAlg.cc
  DataIO/ReadColorMap2DAlg.cc
  DataIO/ReadStringAlg.cc
  DataIO/ReadColorMapAlg.cc
  DataIO/ReadMatrixAlg.cc
  DataIO/WriteStringAlg.cc
  DataIO/ReadPathAlg.cc
  DataIO/WriteFieldAlg.cc
  DataIO/ReadBundleAlg.cc
  DataIO/StreamMatrixFromDiskAlg.cc
  DataIO/WriteMatrixAlg.cc
  NewField/JoinFieldsAlg.cc
  NewField/KDTree.cc
  NewField/RefineMeshByIsovalueAlg.cc
  NewField/FairMeshAlg.cc
  NewField/CreateStructHexAlg.cc
  NewField/ClipLatVolByIndicesOrWidgetAlg.cc
  NewField/GetFieldBoundaryAlg.cc
  NewField/GenRayCastMAAlg.cc
  NewField/ConvertMatricesToMeshAlg.cc
  NewField/ClipFieldToFieldOrWidgetAlg.cc
  NewField/RefineMeshByIsovalue2Alg.cc
  NewField/CreateLatVolAlg.cc
  NewField/InterfaceWithCamalAlg.cc
  NewField/ClipVolumeByIsovalueAlg.cc
  NewField/RefineMeshAlg.cc
  NewField/MergeFieldsAlg.cc
  NewField/GetCentroidsFromMeshAlg.cc
  NewField/ExtractIsosurfaceByFunctionAlg.cc
  NewField/MergeTriSurfsAlg.cc
  NewField/InterfaceWithTetGenAlg.cc
  NewField/CreateImageAlg.cc
  NewField/InsertHexVolSheetAlongSurfaceAlg.cc
  NewField/GenerateSinglePointProbeFromFieldAlg.cc
  NewField/InterfaceWithCubitAlg.cc
  NewField/ClipFieldByFunctionAlg.cc
  NewField/GetDomainBoundaryAlg.cc
  NewField/CollectFieldsAlg.cc
  NewField/GeneratePointSamplesFromFieldAlg.cc
  NewField/GeneratePointSamplesFromFieldOrWidgetAlg.cc
  NewField/DecimateTriSurfAlg.cc
  NewField/GetSliceFromStructuredFieldByIndicesAlg.cc
  NewField/RemoveHexVolSheetAlg.cc
  NewField/SubsampleStructuredFieldByIndicesAlg.cc
  NewField/GetAllSegmentationBoundariesAlg.cc
  NewField/ClipFieldWithSeedAlg.cc
  NewField/SplitNodesByDomainAlg.cc
  NewField/SetMatIndexAlg.cc
  NewField/SeedIntersectionsAlg.cc
  Math/ReportColumnMatrixMisfitAlg.cc
  Math/EvaluateLinAlgGeneralAlg.cc
  Math/AppendMatrixAlg.cc
  Math/EvaluateLinAlgBinaryAlg.cc
  Math/ConvertMaskVectorToMappingMatrixAlg.cc
  Math/SolveLinearSystemAlg.cc
  Math/ReportMatrixColumnMeasureAlg.cc
  Math/SortMatrixAlg.cc
  Math/CreateGeometricTransformAlg.cc
  Math/ChooseMatrixAlg.cc
  Math/ConvertMappingMatrixToMaskVectorAlg.cc
  Math/ResizeMatrixAlg.cc
  Math/CollectMatricesAlg.cc
  Math/GetColumnOrRowFromMatrixAlg.cc
  Math/BuildNoiseColumnMatrixAlg.cc
  Math/EvaluateLinAlgUnaryAlg.cc
  Math/GetSubmatrixAlg.cc
  Math/ReorderMatrixByReverseCuthillMcKeeAlg.cc
  Math/CreateMatrixAlg.cc
  Math/SolveMinNormLeastSqSystemAlg.cc
  Math/ConvertMatrixTypeAlg.cc
  Math/ReportMatrixRowMeasureAlg.cc
  Math/ReorderMatrixByCuthillMcKeeAlg.cc
  Math/ReportMatrixInfoAlg.cc
  Math/RemoveZerosFromMatrixAlg.cc
  Math/RemoveZeroRowsAndColumnsAlg.cc
  MiscField/SetFieldPropertyAlg.cc
  MiscField/ReportScalarFieldStatsAlg.cc
  MiscField/SelectFieldROIWithBoxWidgetAlg.cc
  MiscField/BuildMatrixOfSurfaceNormalsAlg.cc
  MiscField/ReportFieldInfoAlg.cc
  MiscField/ReportFieldGeometryMeasuresAlg.cc
  MiscField/SetFieldOrMeshStringPropertyAlg.cc
  MiscField/ManageFieldSeriesAlg.cc
  MiscField/ReportSearchGridInfoAlg.cc
  MiscField/ChooseFieldAlg.cc
  MiscField/BuildPointCloudToLatVolMappingMatrixAlg.cc
  MiscField/BuildMappingMatrixAlg.cc
  MiscField/CoregisterPointCloudsAlg.cc
  MiscField/CollectPointCloudsAlg.cc
  String/PrintMatrixIntoStringAlg.cc
  String/GetFileNameAlg.cc
  String/SplitFileNameAlg.cc
  String/PrintStringIntoStringAlg.cc
  String/CreateStringAlg.cc
  String/ReportStringInfoAlg.cc
  String/JoinStringsAlg.cc
  String/GetNetworkFileNameAlg.cc
  Visualization/ShowColorMapAlg.cc
  Visualization/CreateAndEditColorMap2DAlg.cc
  Visualization/ShowFieldAlg.cc
  Visualization/ExtractIsosurfaceAlg.cc
  Visualization/CreateViewerAxesAlg.cc
  Visualization/RescaleColorMapAlg.cc
  Visualization/ConvertNrrdsToTextureAlg.cc
  Visualization/ChooseColorMapAlg.cc
  Visualization/CreateLightForViewerAlg.cc
  Visualization/ShowTextureVolumeAlg.cc
  Visualization/ShowFieldGlyphsAlg.cc
  Visualization/GenerateStreamLinesAlg.cc
  Visualization/GenerateStreamLinesWithPlacementHeuristicAlg.cc
  Visualization/ShowStringAlg.cc
  Visualization/CreateAndEditColorMapAlg.cc
  Visualization/ShowMeshBoundingBoxAlg.cc
  Visualization/CreateStandardColorMapsAlg.cc
  Visualization/ShowTextureSlicesAlg.cc
  Visualization/ShowMatrixAlg.cc
  Visualization/CreateViewerClockIconAlg.cc
  Visualization/ConvertFieldsToTextureAlg.cc
  Visualization/ColorMap2DSemanticsAlg.cc
  Time/TimeControlsAlg.cc
  )


SCIRUN_ADD_LIBRARY(Core_Algorithms_Interface ${Core_Algorithms_Interface_SRCS})
ADD_DEPENDENCIES(Core_Algorithms_Interface 
  ai_Bundle
  ai_ChangeFieldData
  ai_ChangeMesh
  ai_Converters
  ai_DataArrayMath
  ai_DataIO
  ai_Info
  ai_Math
  ai_MiscField
  ai_NewField
  ai_String
  ai_Time
  ai_Visualization
)


TARGET_LINK_LIBRARIES(Core_Algorithms_Interface
  Core_Algorithms_ArrayMath
  Core_Algorithms_Converter
  Core_Algorithms_DataIO
  Core_Algorithms_DataStreaming
  Core_Algorithms_Fields
  Core_Algorithms_Geometry
  Core_Algorithms_Math
  Core_Algorithms_Regression
  Core_Algorithms_Visualization
  Core_Basis
  Core_Containers
  Core_Events
  Core_Events_CM2View
  Core_Exceptions
  Core_Geom
  Core_Geometry
  Core_Persistent
  Core_Thread
  Core_Util
  Core_Volume
  ${TEEM_LIBRARY}
  ${PNG_LIBRARY}
  ${Z_LIBRARY}
  ${GL_LIBRARY}
  ${M_LIBRARY}
  ${SLIVR_LIBRARY}
)

IF(BUILD_SHARED_LIBS)
  ADD_DEFINITIONS(-DBUILD_Core_Algorithms_Interface)
ENDIF(BUILD_SHARED_LIBS)
